# zrive-ds

./: pyproject.toml
src/module_2/: module2_eda.ipynb
src/module_3/: module3_statistical_learning.ipynb  module3_statistical_learning.md
src/module_5/: module5.ipynb
