[tool.poetry]
name = "zrive-ds"
version = "0.1.0"
description = "Project for the program Zrive Applied Data Science"
authors = ["Guille Barquero <gb@zriveapp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
numpy = "^1.25.2"
requests = "^2.31.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
pytest = "^7.4.0"
scikit-learn = "^1.4.0"
backoff = "^2.2.1"
boto3 = "^1.34.29"
pyarrow = "^15.0.0"
seaborn = "^0.13.2"
plotly = "^5.18.0"
skimpy = "^0.0.14"
summarytools = "^0.2.3"
jinja2 = "^3.1.3"
imblearn = "^0.0"
category-encoders = "^2.6.3"
lightgbm = "^4.3.0"
plotnine = "^0.13.0"
jupyterlab = "^4.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
